FieldEditabile WIP (Provider,Sede,DatiAccreditamento,AllegatiAccreditamento,Persone)

--- a/src/main/resources/templates/persona/personaEdit.html
+++ b/src/main/resources/templates/persona/personaEdit.html
@@ -5,7 +5,7 @@
 <head lang="it">
 </head>
 <body>
-	<div layout:fragment="content" id="main-container" th:fragment="content" th:with="counter=${personaWrapper.idOffset - 1}">
+	<div layout:fragment="content" id="main-container" th:fragment="content">
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="x_panel">
