--- a/src/main/resources/templates/persona/personaFragment.html
+++ b/src/main/resources/templates/persona/personaFragment.html
@@ -9,8 +9,6 @@
 	<!-- parametri del fragment: boolean passato come parametro e prende personaWrapper dal module del chiamante -->
 	<th:block th:fragment="persona(editabile)">
 		<!-- ogni parte non in comune tra le due sarà gestito in maniera appropriata -->
-		<th:block th:with="counter=${(editabile == true) ? (personaWrapper.idOffset-1) : null}">
-
 					<div class="x_content">
 						<!-- rimove il tag form se la persona NON è editabile -->
 						<div class="form-horizontal form-label-left" th:remove="${!editabile} ? none : tag">
@@ -28,7 +26,6 @@
 							<input type="hidden" th:field="${personaWrapper.providerId}" />
 							<input type="hidden" th:field="${personaWrapper.ruolo}" />
 							<input type="hidden" th:field="${personaWrapper.idEditabili}" />
-							<input type="hidden" th:field="${personaWrapper.idOffset}" />
 							<input id="hidden-lookup" type="hidden" th:field="${personaWrapper.isLookup}" />
 						</th:block>
 
@@ -39,7 +36,7 @@
 							<label class="control-label col-md-4 col-sm-4 col-xs-12" for="isCoordinatore_comitato">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="${editabile ? #messages.msg('label.is_coordinatore') : #messages.msg('label.inserito_come_coordinatore')}">Inserisci come Coordinatore del Comitato Scientifico</span>
 							</label>
-							<th:block th:with="counter=${counter}" th:if="${editabile}">
+							<th:block th:if="${editabile}">
 								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="checkbox">
 										<input id="isCoordinatore_comitato" name="isCoordinatore_comitato"
@@ -57,15 +54,15 @@
 
 						<!-- COGNOME -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.cognome')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.cognome',personaWrapper.ruolo) : ''}"></label>
+							<label class="control-label col-xs-1" th:text="${editabile ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.cognome',personaWrapper.ruolo) : ''}"></label>
 
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="cognome_persona">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.cognome}">Cognome</span>
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
-							<th:block th:with="counter=${counter}" th:if="${editabile}">
+							<th:block th:if="${editabile}">
 								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-									<input id="cognome_persona"	name="cognome_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, counter)}"
+									<input id="cognome_persona"	name="cognome_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('persona.anagrafica.cognome',personaWrapper.ruolo))}"
 										required="required"	class="form-control col-md-7 col-xs-12"
 										type="text" th:field="${personaWrapper.persona.anagrafica.cognome}" />
 								</div>
@@ -80,14 +77,14 @@
 
 						<!-- NOME -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.nome')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.nome',personaWrapper.ruolo) : ''}"></label>
+							<label class="control-label col-xs-1" th:text="${editabile ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.nome',personaWrapper.ruolo) : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="cognome_persona">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.nome}">Nome</span>
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
-							<th:block th:with="counter=${counter}" th:if="${editabile}">
+							<th:block th:if="${editabile}">
 								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-									<input id="nome_persona" name="nome_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, counter)}"
+									<input id="nome_persona" name="nome_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('persona.anagrafica.nome',personaWrapper.ruolo))}"
 										required="required"	class="form-control col-md-7 col-xs-12"
 										type="text" th:field="${personaWrapper.persona.anagrafica.nome}" />
 								</div>
@@ -102,14 +99,14 @@
 
 						<!-- CODICE FISCALE -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.codiceFiscale')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.codiceFiscale',personaWrapper.ruolo) : ''}"></label>
+							<label class="control-label col-xs-1" th:text="${editabile ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.codiceFiscale',personaWrapper.ruolo) : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="codiceFiscale_persona">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.codice_fiscale}">Codice Fiscale</span>
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
-							<th:block th:with="counter=${counter}" th:if="${editabile}">
+							<th:block th:if="${editabile}">
 								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-									<input id="codiceFiscale_persona" name="codiceFiscale_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, counter) or personaWrapper.isLookup}"
+									<input id="codiceFiscale_persona" name="codiceFiscale_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('persona.anagrafica.codiceFiscale',personaWrapper.ruolo)) or personaWrapper.isLookup}"
 										required="required"	class="form-control col-md-7 col-xs-12"
 										type="text" th:field="${personaWrapper.persona.anagrafica.codiceFiscale}" />
 								</div>
@@ -128,10 +125,10 @@
 							<label class="control-label col-md-4 col-sm-4 col-xs-12" for="isStraniero_persona">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.cf_straniero}">Ha un codice fiscale non italiano</span>
 							</label>
-							<th:block th:with="counter=${counter}" th:if="${editabile}">
+							<th:block th:if="${editabile}">
 								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 									<div class="checkbox">
-										<input id="isStraniero_persona" name="isStraniero_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, counter)}"
+										<input id="isStraniero_persona" name="isStraniero_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('persona.anagrafica.codiceFiscale',personaWrapper.ruolo))}"
 											class="flat" type="checkbox" th:field="${personaWrapper.persona.anagrafica.straniero}" />
 									</div>
 								</div>
@@ -145,14 +142,14 @@
 
 						<!-- TELEFONO -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.telefono')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.telefono',personaWrapper.ruolo)  : ''}"></label>
+							<label class="control-label col-xs-1" th:text="${editabile ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.telefono',personaWrapper.ruolo)  : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="telefono_persona">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.telefono}">Telefono</span>
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
-							<th:block th:with="counter=${counter}" th:if="${editabile}">
+							<th:block th:if="${editabile}">
 								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-									<input id="telefono_persona" name="telefono_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, counter)}"
+									<input id="telefono_persona" name="telefono_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('persona.anagrafica.telefono',personaWrapper.ruolo))}"
 										required="required"	class="form-control col-md-7 col-xs-12"
 										type="tel" th:field="${personaWrapper.persona.anagrafica.telefono}" />
 								</div>
@@ -171,14 +168,14 @@
 										${personaWrapper.persona.responsabileSistemaInformatico} or
 										${personaWrapper.persona.responsabileQualita}"
 							class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.cellulare')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.cellulare',personaWrapper.ruolo)  : ''}"></label>
+							<label class="control-label col-xs-1" th:text="${editabile ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.cellulare',personaWrapper.ruolo)  : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="cellulare_persona">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.cellulare}">Cellulare</span>
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
-							<th:block th:with="counter=${counter}" th:if="${editabile}">
+							<th:block th:if="${editabile}">
 								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-									<input id="cellulare_persona" name="cellulare_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, counter)}"
+									<input id="cellulare_persona" name="cellulare_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('persona.anagrafica.cellulare',personaWrapper.ruolo))}"
 										required="required"	class="form-control col-md-7 col-xs-12"
 										type="tel" th:field="${personaWrapper.persona.anagrafica.cellulare}" />
 								</div>
@@ -193,14 +190,14 @@
 
 						<!-- EMAIL -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.email')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.email',personaWrapper.ruolo)  : ''}"></label>
+							<label class="control-label col-xs-1" th:text="${editabile ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.email',personaWrapper.ruolo)  : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="email_persona">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.email}">Email</span>
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
-							<th:block th:with="counter=${counter}" th:if="${editabile}">
+							<th:block th:if="${editabile}">
 								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-									<input id="email_persona" name="email_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, counter)}"
+									<input id="email_persona" name="email_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('persona.anagrafica.email',personaWrapper.ruolo))}"
 										required="required"	class="form-control col-md-7 col-xs-12"
 										type="email" th:field="${personaWrapper.persona.anagrafica.email}" />
 								</div>
@@ -216,14 +213,14 @@
 						<!-- POSTA ELETTRONICA CERTIFICATA (PEC) -->
 						<div th:if="${personaWrapper.persona.legaleRappresentante}"
 							class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.pec')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.pec',personaWrapper.ruolo)  : ''}"></label>
+							<label class="control-label col-xs-1" th:text="${editabile ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.anagrafica.pec',personaWrapper.ruolo)  : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="pec_persona">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.posta_elettronica_certificata}">Posta elettronica certificata (PEC)</span>
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
-							<th:block th:with="counter=${counter}" th:if="${editabile}">
+							<th:block th:if="${editabile}">
 								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-									<input id="pec_persona" name="pec_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, counter)}"
+									<input id="pec_persona" name="pec_persona" th:disabled="${!#lists.contains(personaWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('persona.anagrafica.pec',personaWrapper.ruolo))}"
 										required="required"	class="form-control col-md-7 col-xs-12"
 										type="email" th:field="${personaWrapper.persona.anagrafica.pec}" />
 								</div>
@@ -240,19 +237,19 @@
 						<div th:if="${personaWrapper.persona.coordinatoreComitatoScientifico} or
 									${personaWrapper.persona.componenteComitatoScientifico}"
 							class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.professione')} ? 'bad'">
-							<label class="control-label col-xs-1" th:text="${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.professione',personaWrapper.ruolo)  : ''}"></label>
+							<label class="control-label col-xs-1" th:text="${editabile ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.professione',personaWrapper.ruolo)  : ''}"></label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11" for="professione_persona">
 								<span th:class="${editabile ? '' : 'label-show'}" th:text="#{label.professione}">Professione</span>
 								<span th:if="${editabile}" class="required">*</span>
 							</label>
-							<th:block th:with="counter=${counter}" th:if="${editabile}">
+							<th:block th:if="${editabile}">
 								<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 		                        	<select id="professione_persona" class="selectpicker"
 										data-width="100%" data-style="btn-primary" data-actions-box="true"
 										data-size="10" title="Seleziona una professione..."
 										th:remove="all-but-first"
 										th:field="${personaWrapper.persona.professione}"
-										th:disabled="${!editabile or !#lists.contains(personaWrapper.idEditabili, counter)}">
+										th:disabled="${!editabile or !#lists.contains(personaWrapper.idEditabili, T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('persona.professione',personaWrapper.ruolo))}">
 										<option th:each="professione, row: ${professioneList}"
 											th:value="${professione.id}" th:text="${professione.nome}">Professione selezionata</option>
 									</select>
@@ -269,22 +266,21 @@
 						<!-- ALLEGATO 1 (ATTO DI NOMINA) -->
 						<div th:unless="${personaWrapper.persona.delegatoLegaleRappresentante}">
 							<div th:if="${editabile}" class="divider-dashed"></div>
-							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, attoNomina, ${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.file.attoNomina',personaWrapper.ruolo) : null}, null, true, ${editabile}, true)" ></th:block>
+							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, attoNomina, ${editabile ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.file.attoNomina',personaWrapper.ruolo) : null}, null, true, ${editabile}, true)" ></th:block>
 						</div>
 
 						<!-- ALLEGATO 2 (CURRICULUM VITAE) -->
 						<div th:if="${editabile}" class="divider-dashed"></div>
-						<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, cv, ${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.file.cv',personaWrapper.ruolo) : null}, null, true, ${editabile}, true)"></th:block>
+						<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, cv, ${editabile ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.file.cv',personaWrapper.ruolo) : null}, null, true, ${editabile}, true)"></th:block>
 
 						<!-- ALLEGATO 3 (DELEGA) -->
 						<div th:if="${personaWrapper.persona.delegatoLegaleRappresentante}">
 							<div th:if="${editabile}" class="divider-dashed"></div>
-							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, delega, ${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.file.delega',personaWrapper.ruolo) : null}, null, true, ${editabile}, true)"></th:block>
+							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, delega, ${editabile ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('persona.file.delega',personaWrapper.ruolo) : null}, null, true, ${editabile}, true)"></th:block>
 						</div>
 					</form>
 				</div>
 			</div>
-		</th:block>
 	</th:block>
 </body>
 </html>
