--- a/src/main/resources/templates/provider/providerForm.html
+++ b/src/main/resources/templates/provider/providerForm.html
@@ -303,7 +303,7 @@
 
 									<!-- delega -->
 									<div id="delegaFile" th:class="${providerForm.delegato} ? '' : hidden">
-										<th:block th:include="fragments/allegati :: allegati(providerForm, false, delega, null, null, true, true, true)" ></th:block>
+										<th:block th:include="fragments/allegati :: allegati(providerForm, false, delega, null, null, null, true, true, true)" ></th:block>
 									</div>
 
 									<!-- Invia dati -->
